Fix wrapping of phys thing name in sidebar

--- a/arches_for_science/media/css/project.css
+++ b/arches_for_science/media/css/project.css
@@ -209,6 +209,7 @@
     max-width: calc(100%);
     white-space: nowrap;
     overflow: hidden;
+    text-wrap: unset;
 }
 
 .wf-multi-tile-card-info-details dd {
